# endorlabs-mergeQue-sanity-test-repo--829cdfdf-9bff-44

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  dependencies.py  weather.py
backend/src/auth/: __init__.py  dependencies.py  utils.py
backend/src/models/: __init__.py  user.py  weather.py
backend/src/services/: __init__.py  weather_service.py
backend/src/tests/: test_weather_service.py
frontend/: Dockerfile  craco.config.js  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: ForecastCard.tsx  Login.tsx  SearchBar.tsx  WeatherCard.tsx  WeatherMap.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: weather.ts
resources/: authentication.diff
